5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1577_1332.log
== TEST (2019-03-19 18:16:20) 
-- CODE:
aresta =5
area = 
 
print(round(3/2*(3a**2)**0,5, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:17:57) 
-- CODE:
aresta =5
area = 
 
print(round(3/2*(3**0,5)*a**2, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:18:19) 
-- CODE:
aresta =5
area = 
 
print(round(3/2*(3**0,5)5**2, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:24:17) 
-- CODE:
aresta =5
area = 
 
print(round((3/2*(3**0,5)5**2), 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:24:42) 
-- CODE:
aresta =5
area = a
 
print(round((3/2*(3**0,5)5**2), 4))
-- ERROR:
File "XXXX", line 4
    print(round((3/2*(3**0,5)5**2), 4))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:24:56) 
-- CODE:
aresta =5
area = 
 
print(round((3/2*(3**0,5)5**2), 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:11) 
-- CODE:
aresta =5

 
print(round((3/2*(3**0,5)5**2), 4))
-- ERROR:
File "XXXX", line 4
    print(round((3/2*(3**0,5)5**2), 4))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:33) 
-- CODE:
aresta =5

 
print(round((3/2*(3)**0,5**2), 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((3/2*(3)**0,5**2), 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:40) 
-- CODE:
aresta =5

 
print(round(3/2*(3)**0,5**2), 4))
-- ERROR:
File "XXXX", line 4
    print(round(3/2*(3)**0,5**2), 4))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:44) 
-- CODE:
aresta =5

 
print(round(3/2*(3)**0,5**2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(3/2*(3)**0,5**2, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:25:54) 
-- CODE:
aresta =5

 
print(round(3/2*(3)**0.5**2, 4))
-- OUTPUT:
1.9741
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:26:01) 
-- CODE:
aresta =5

 
print(round(3/2*(3)**0.5**2, 4))
-- EXECUTION TIME:
0.160826
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.9741
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:26:13) 
-- CODE:
aresta =5

 
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:26:15) 
-- CODE:
aresta =5

 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.247971
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
